proper filename canonicalization

this handles symlinks in paths + .. correctly

BUG: 339061